--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -1,10 +1,10 @@
-name: Generate package-lock.json
+name: Print package-lock.json
 
 on:
   workflow_dispatch:
 
 jobs:
-  generate-lockfile:
+  generate-and-print-lockfile:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,16 +14,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
 
       - name: Generate package-lock.json
         run: npm install --package-lock-only
 
       - name: Print package-lock.json
         run: cat package-lock.json
-
-      - name: Upload package-lock.json as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: package-lock.json
-          path: package-lock.json
