--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "private": true,
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder",
-    "dist:linux": "electron-builder --linux",
-    "dist:win": "electron-builder --win"
+    "dist": "electron-builder --publish=never",
+    "dist:linux": "electron-builder --linux --publish=never",
+    "dist:win": "electron-builder --win --publish=never"
   },
   "dependencies": {},
   "devDependencies": {
@@ -31,7 +31,6 @@
     "directories": {
       "output": "dist"
     },
-    "publish": "never",
     "linux": {
       "target": [
         "AppImage",
