--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-24.04-arm]
     runs-on: ${{ matrix.os }}
 
     steps:
